# webapp

./: .breakpoints  README.md  main.py  pyproject.toml  requirements.
static/: login.css
static/css/: base.css  blog.css  form.css  home.css  profile.css  sahid.css  style.css
templates/: addblog.html  base.html  blog.html  forget.html  home.html  login.html  p.html  profile.html  sahid.html  signin.html  tool.html
